"Functional" spell interface.