@@ -1,4 +1,3 @@
-/*
 package mysticmods.roots.integration.jei.categories;
 
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
@@ -6,20 +5,23 @@ import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mysticmods.roots.api.RootsAPI;
-import mysticmods.roots.api.capability.Grant;
-import mysticmods.roots.client.ItemCache;
+import mysticmods.roots.api.attachment.Unlock;
 import mysticmods.roots.init.ModBlocks;
 import mysticmods.roots.integration.jei.RootsJEIPlugin;
 import mysticmods.roots.recipe.mortar.MortarRecipe;
+import net.minecraft.client.Minecraft;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.ItemStack;
 
 public class MortarCategory extends RootsRecipeBaseCategory<MortarRecipe> {
   public MortarCategory(IGuiHelper helper) {
-    super(RootsJEIPlugin.MORTAR_RECIPE_TYPE, helper, 90, 53, RootsAPI.rl("textures/gui/jei/mortar_and_pestle.png"), ModBlocks.MORTAR::asStack, Component.translatable("roots.jei.mortar_crafting"));
+    super(RootsJEIPlugin.MORTAR_RECIPE_TYPE, helper, 90, 53, RootsAPI.rl("textures/gui/jei/mortar_and_pestle.png"), () -> new ItemStack(ModBlocks.MORTAR.get()), Component.translatable("roots.jei.mortar_crafting"));
   }
 
   @Override
   public void setRecipe(IRecipeLayoutBuilder builder, MortarRecipe recipe, IFocusGroup iFocusGroup) {
+    HolderLookup.Provider provider = Minecraft.getInstance().getConnection().registryAccess();
     for (int i = 0; i < recipe.getIngredients().size(); i++) {
       builder.addSlot(RecipeIngredientRole.INPUT, 1 + i * 18, 3).addIngredients(recipe.getIngredients().get(i));
     }
@@ -27,26 +29,29 @@ public class MortarCategory extends RootsRecipeBaseCategory<MortarRecipe> {
     boolean hasOutput = false;
 
     // TODO: If it's empty there's a grant
-    if (recipe.getResultItem() != null && !recipe.getResultItem().isEmpty()) {
+    if (recipe.getResultItem(provider) != null && !recipe.getResultItem(provider).isEmpty()) {
       hasOutput = true;
-      builder.addSlot(RecipeIngredientRole.OUTPUT, 73, 28).addItemStack(recipe.getResultItem());
+      builder.addSlot(RecipeIngredientRole.OUTPUT, 73, 28).addItemStack(recipe.getResultItem(provider));
     } else {
-      if (recipe.getGrants().size() == 1) {
-        Grant grant = recipe.getGrants().get(0);
-        builder.addSlot(RecipeIngredientRole.OUTPUT, 73, 28).addItemStack(ItemCache.getGrantStack(grant));
+      if (recipe.getUnlocks().size() == 1) {
+        Unlock<?> unlock = recipe.getUnlocks().getFirst();
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 73, 28).addItemStack(unlock.getIcon());
       }
     }
 
     for (int i = 0; i < recipe.getChanceOutputs().size(); i++) {
-      builder.addSlot(RecipeIngredientRole.OUTPUT, i * 18, 30).addItemStack(recipe.getChanceOutputs().get(i).getOutput());
+      builder.addSlot(RecipeIngredientRole.OUTPUT, i * 18, 30)
+          .addItemStack(recipe.getChanceOutputs().get(i).getOutput());
     }
 
     if (hasOutput) {
-      for (int i = 0; i < recipe.getGrants().size(); i++) {
-        Grant grant = recipe.getGrants().get(i);
-        builder.addSlot(RecipeIngredientRole.OUTPUT, i * 18, 50).addItemStack(ItemCache.getGrantStack(grant));
+      for (int i = 0; i < recipe.getUnlocks().size(); i++) {
+        Unlock<?> unlock = recipe.getUnlocks().get(i);
+        if (unlock.getIcon().isEmpty()) {
+          continue;
+        }
+        builder.addSlot(RecipeIngredientRole.OUTPUT, i * 18, 50).addItemStack(unlock.getIcon());
       }
     }
   }
 }
-*/
